[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[files]
packages = ["xpoint"]
include = ["docs", "tests","examples"]


[project]
name = "xpoint"
version = "0.0.0"
description = "Library for 3D geometry"
authors = [{ name = "Riccardo De Maria", email = "riccardodemaria@gmail.com" }]
license = { text = "MIT" }
urls = { homepage = "https://github.com/rdemaria/xpoint", repository = "https://github.com/rdemaria/xpoint" }
keywords = ["geometry"]
dependencies = [ "numpy", "matplotlib"]

[tool.black]
line-length = 79